--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,14 +8,14 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.webp",
-      "type": "image/webp",
+      "src": "logo192.png",
+      "type": "image/png",
       "sizes": "192x192",
       "purpose": "maskable any"
     },
     {
-      "src": "logo512.webp",
-      "type": "image/webp",
+      "src": "logo512.png",
+      "type": "image/png",
       "sizes": "512x512",
       "purpose": "maskable any"
     }
